Fix CSS creating a new line on list items that are too long

--- a/css/style.css
+++ b/css/style.css
@@ -688,11 +688,9 @@ pre {
 }
 .unit-article ul {
   list-style: square;
-  list-style-position: inside;
 }
 .unit-article ol {
   list-style: decimal;
-  list-style-position: inside;
 }
 .unit-article li h1,
 .unit-article dt h1,
